create aura components

--- a/final/sfdx-project.json
+++ b/final/sfdx-project.json
@@ -5,7 +5,7 @@
       "default": true
     }
   ],
-  "name": "ffinalTask",
+  "name": "final",
   "namespace": "",
   "sfdcLoginUrl": "https://login.salesforce.com",
   "sourceApiVersion": "54.0"
