--- a/final/.vscode/settings.json
+++ b/final/.vscode/settings.json
@@ -3,5 +3,6 @@
     "**/node_modules": true,
     "**/bower_components": true,
     "**/.sfdx": true
-  }
+  },
+  "salesforcedx-vscode-apex.java.home": "/home/pc118_07/Documents/usr/java/jdk-18.0.1.1"
 }
